syntax = "proto3";

package lessons;

service LessonsService {
  rpc GetTeacherLessons(TeacherLessonsRequest) returns (LessonsResponse);
  rpc GetStudentLessons(GetStudentLessonsRequest) returns (LessonsResponse);
}

message TeacherLessonsRequest {
  string teacherId = 1;
}

message GetStudentLessonsRequest {
  string studentId = 1;
}

message Lesson {
  string id = 1;
  string title = 2;
  string description = 3;
  string date = 4;  // YYYY-MM-DD
  string time = 5;  // HH:mm
  string status = 6;
  repeated string students = 7;
  int32 countOfStudents = 8;
}

message LessonsResponse {
  repeated Lesson lessons = 1;
}